# xlhdnumpy

./: README.md  pyproject.toml  setup.cfg
tests/: test_array.py  test_operations.py
xlhdnumpy/: __init__.py  array.py  operations.py
xlhdnumpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
