[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlhdnumpy"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" }
]
description = "A simple numpy-like library for array operations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/xlhdnumpy"
