[metadata]
name = xlhdnumpy
version = 0.2.0
author = xiaolihuidao
author_email = cd101168@qq.com
description = A simple numpy-like library for array operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xiaolihuidao/xlhdnumpy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.package_data]
* = *.txt, *.md